--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,12 @@ h5 {
   height: 40px;
 }
 code {
-  font-size: 28px;
+  font-size: 24px;
 }
 .content > p, .content > form > p {
   margin: 1em 1.5em;
   text-align: left;
+}
+.content ol {
+  font-size: 28px;
 }
